@@ -53,7 +53,9 @@
 #include <QNetworkRequest>
 #include <QPaintDevice>
 #include <QPaintEngine>
+#ifndef QT_NO_PRINTER
 #include <QPrinter>
+#endif
 #include <QUndoStack>
 #include <QUrl>
 
@@ -117,6 +119,7 @@ void NetworkAccessManager::sslErrorsEncountered(QNetworkReply* reply, const QLis
 #endif
 
 
+#ifndef QT_NO_PRINTER
 class NullPrinter : public QPrinter {
 public:
     class NullPaintEngine : public QPaintEngine {
@@ -132,6 +135,7 @@ public:
 
     NullPaintEngine m_engine;
 };
+#endif
 
 
 WebPage::WebPage(QObject* parent, DumpRenderTree* drt)
@@ -412,8 +416,10 @@ static void clearHistory(QWebPage* page)
 
 void DumpRenderTree::dryRunPrint(QWebFrame* frame)
 {
+#ifndef QT_NO_PRINTER
     NullPrinter printer;
     frame->print(&printer);
+#endif
 }
 
 void DumpRenderTree::resetToConsistentStateBeforeTesting()
