@@ -1,3 +1,15 @@
+2010-04-06  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] [Symbian] Build fix for Dumprendertree if Qt printing is not supported
+        https://bugs.webkit.org/show_bug.cgi?id=37082
+
+        Use the QT_NO_PRINTER guard to flag QPrinter dependent code.
+
+        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
+        (WebCore::DumpRenderTree::dryRunPrint):
+
 2010-04-05  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
